--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   </head>
   <body>
     <h1>Hello</h1>
+    <div>
+      <img
+        src="img_hello_world.jpg"
+        alt="Hello World from Space"
+        style="width: 100%; max-width: 960px"
+      />
+    </div>
     <p>this is my first git repository.</p>
     <p>A new line in our file!!!</p>
   </body>
