--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hello</h1>
     <div>
       <img
-        src="./img_hello_world.jpg"
+        src="./hello.jpg"
         alt="Hello World from Space"
         style="width: 100%; max-width: 960px"
       />
