updated index.html with emergency fix

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Hello</h1>
     <p>this is my first git repository.</p>
     <p>A new line in our file!!!</p>
+    <p>this will merge to master</p>
   </body>
 </html>
