another line in our life added

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     </div>
     <p>this is my first git repository.</p>
     <p>A new line in our file!!!</p>
+    <p>Another line in our file!!!</p>
   </body>
 </html>
