brand new line added into index.html file

--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
     <p>this is my first git repository.</p>
     <p>A new line in our file!!!</p>
     <p>Another line in our file!!!</p>
+    
+    <h2>This is a brand new line</h2>
   </body>
 </html>
