--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img
         src="./hello.jpg"
         alt="Hello World from Space"
-        style="width: 100%; max-width: 960px, border: 1px solid black"
+        style="width: 100%; max-width: 960px; border: 1px solid black"
       />
     </div>
     <p>this is my first git repository.</p>
